--- a/public/index.html
+++ b/public/index.html
@@ -208,6 +208,7 @@
             align-items: center;
             gap: 8px;
             border: 1px solid var(--border-divider);
+            flex-shrink: 0;
         }
 
         .nav-tab:hover {
