--- a/public/index.html
+++ b/public/index.html
@@ -4013,6 +4013,9 @@
         </div>
     </div>
 
+    <!-- Supabase JS Client for Auth (must load before inline script) -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <script>
         const API_BASE = '/api';
 
@@ -8076,8 +8079,6 @@
     </script>
     <!-- Chart.js for visualizations -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Supabase JS Client for Auth -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- Sticky Disclaimer -->
     <div class="sticky-disclaimer">
